fix(plugins/plugin-client-common): table is misaligned with command input
Fixes #5734

--- a/plugins/plugin-client-common/web/scss/components/Table/tables.scss
+++ b/plugins/plugin-client-common/web/scss/components/Table/tables.scss
@@ -194,9 +194,6 @@ body[kui-theme-style] .kui--data-table-wrapper {
   .kui--screenshotable {
     flex: 1;
     display: flex;
-
-    /* make space for any box shadows, making sure these are captured in the screenshot */
-    padding: 1px 1px;
   }
 
   .kui--card-footer {
