--- a/plugins/plugin-client-common/web/scss/components/Terminal/Block.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/Block.scss
@@ -214,6 +214,7 @@ li.repl-block {
       display: flex;
       justify-content: flex-end;
       flex-basis: 3rem;
+      min-width: 3rem;
       text-align: end;
       margin-right: 0.5rem;
       position: relative;
